public/css/style.css
/* ... */
.menu .menu_box .menu_card .menu_info .menu_btn:hover{
    border-radius: 20px;
}
.newbtn{
    display: flex;
    justify-content: center;
    text-align: center;
    width: 100%;
    
}
.newbtn .new_btn{
    color: white;
    text-decoration: none;
    background: #90323d;
    width: 180px;
    padding: 10px 5px;
    border-radius: 5px;
}
.newbtn .new_btn:hover{
    border-radius: 20px;
}


/*Gallery*/

.gallery-div{
    width: 100%;
    padding-bottom: 7vw;
    display: flex;
    flex-direction: column;
}

.gallery-div h1{
    font-size: 55px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.gallery-div h1 span{
    margin-left: 15px;
    color: #90323d;
    font-family: mv boli;
}

.gallery-div h1 span::after{
    content: '';
    width: 100%;
    height: 2px;
    background: #90323d;
    display: block;
    position: relative;
    bottom: 15px;
}
.background {
    display: grid;
    place-items: center;
}
#viewGalleryBtn {
    color: white;
    text-decoration: none;
    background: #90323d;
    margin-top: 30px;
    text-align: center;
    width: 120px;
    padding: 10px 5px;
    border-radius: 7px;
}
#viewGalleryBtn:hover{
    border-radius: 20px;
}

.gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
    max-width: 800px;
}

.gallery .card {
    position: relative;
    left: 0px;
    width: 150px;
    border-radius: 16px;
    height: 360px;
    overflow: hidden;
     transition: flex 0.4s ease-in-out, border-radius 0.4s ease-in-out;
    /* transition: 0.4s ease-in-out; */
    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.5);
    flex: 0.25;
}

.gallery .card img {
    /* width: 100%; */
    height: 360px;
}
.gallery .card img:hover {
    width: 100%;
}
.card:hover {
    flex: 1; /*previously flex:2 */
    font-weight: bold;
    cursor: pointer;
    border-radius: 8px;
}


.review-header h1{
    display: flex;
    align-items: center;
    justify-content: center;
    color: #000;
    font-size: 55px;
}
.review-header h1 span{
    color: #90323d;
    margin-left: 15px;
    font-family: mv boli;
}
.review-card {
    max-width: 400px;
    width: 100%;
    margin: auto;
    background-color: #fff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    overflow: hidden;
  }

  .review-content,
  .review-author {
    padding: 16px;
  }

/*Order*/

.order{
    width: 100%;
    padding-bottom: 7vw;
    background-image: url(image/bg2.jpg);
    background-size: cover;
    background-position: center;
}

.order h1{
    display: flex;
    align-items: center;
    justify-content: center;
    color: #000;
    font-size: 55px;
}

.order h1 span{
    color: #90323d;
    margin-right: 15px;
    font-family: mv boli;
}

.order h1 span::after{
    content: '';
    width: 100%;
    height: 2px;
    background: #90323d;
    display: block;
    position: relative;
    bottom: 15px;
}

.order .order_main{
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.order .order_main .order_image img{
    width: 500px;
}

.order .order_main form{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0 10px;
}

.order .order_main form .input p{
    line-height: 25px;
}

.order .order_main form .input{
    margin: 5px 0;
}

.order .order_main form .input input{
    width: 300px;
    height: 35px;
    padding: 0 10px;
    border: 2px solid #cccccc;
    background: #eeeeee;
    outline: none;
    border-radius: 3px;
}

.order .order_main form .input input:focus{
    border: 2px solid #90323d;
}

#myForm1 .order_btn{
    cursor: pointer;
    padding: 5px;
    background: #90323d;
    color: white;
    width: 90px;
    text-align: center;
    margin-top: 20px;
    text-decoration: none;
    border-radius: 5px;
}
#myForm1 .order_btn:hover {
    border-radius: 20px;
}



/* Form */
.write-review{
    width: 100%;
    padding:0 7vw;
}
.write-review h1{
    font-size: 45px;
    padding-bottom: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.write-review h1 span{
    margin-left: 15px;
    color: #90323d;
    font-family: mv boli;
}

.write-review h1 span::after{
    content: '';
    width: 100%;
    height: 2px;
    background: #90323d;
    position: relative;
    bottom: 15px;
    display: block;
}
.formBox{
    position: relative;
    width: 100%;
}
.formBox .row50{
    display: flex;
    gap: 20px;
}
.inputbox{
    display: flex;
    flex-direction: column;
    margin-bottom: 10px;
    width: 50%;
   
}
.row100 .inputbox{
    width: 50%;
}
.inputbox span{
    color: #37371f;
    margin-top: 10px;
    margin-bottom: 5px;
    font-weight: 500;
}
.inputbox input{
    padding: 10px;
    font-size: 1.1em;
    outline: none;
    border: 1px solid #000;
    border-radius: 5px;
}
.inputbox textarea{
    padding: 10px;
    font-size: 1.1em;
    outline: none;
    border: 1px solid #000;   
    resize: none;
    min-height: 220px;
    margin-bottom: 10px;
    border-radius: 5px;
}
.inputbox input[type="submit"]{
    background: #90323d;
    color: #ffff;
    border: none;
    font-size: 1.1em;
    max-width: 80px;
    font-weight: 500;
    cursor: pointer;
    padding: 5px;
}
.inputbox .sendBtn:hover {
    border-radius: 20px;
}
.inputbox ::placeholder{
    color: #90323d;
}


/*Footer*/
footer{
    width: 100%;
    padding: 30px 0 30px 20px;
    background: #37371f;
    margin-top: 5vw;
}
footer ul {
    display: flex;
    flex-direction: column;
    height: 100%;
    align-items: center ;
}
footer ul li{
    display: inline-block;
    margin: 0 15px;
}
footer ul li a{
    text-decoration: none;
    color: #fff;
    font-weight: 500;
    font-size: 17px;
    transition: 0.1s;
}
footer ul li a::after{
    content: '';
    width: 0;
    height: 2px;
    background: #90323d;
    display: block;
    transition: 0.2s linear;
}

footer ul li a:hover::after{
    width: 100%;
}

footer ul li a:hover{
    color: #fff;
}
/* ... */

